--- a/css/lebusa.css
+++ b/css/lebusa.css
@@ -12,7 +12,7 @@ Author URL: http://www.enesatik.org
 *{margin: 0;}
 body {background: #E4E6E6; color: #3c3c3c; font-family: 'Open Sans', sans-serif;font-size: 13px;}
 a {color:#00567C; text-decoration:none;}
-a:hover {color: darkorange; text-decoration:none;}
+a:hover {color: darkorange; text-decoration:underline;}
 #container {min-width: 1022px; width: 98%; margin: 0 auto;}
 .panel {width: 100%; min-width: 1022px;position: fixed; z-index: 1000; top: 0; height: 50px; background: #1f1f1f; border-bottom: 1px solid #000; }
 .panel .sagsira {float:right;}
@@ -22,13 +22,13 @@ a:hover {color: darkorange; text-decoration:none;}
 .panel li a {color: grey;}
 .navigasyon li a {text-decoration: none;}
 .panel li ul.kayit {color: #000; text-shadow: 0 0 0; font-weight: 200; box-shadow: 0.3px 0.3px 1px #fff;  font-family: Trebuchet MS, sans-serif; font-size: 14px; cursor: default; display: none; position: absolute; top: 50px; margin-left: -210px; background: #fff; padding: 30px 40px 30px 40px; border-radius: 2px; -webkit-border-radius: 2px; -moz-border-radius: 2px; border: 6px solid #111;}
-.panel li ul.uyepaneli {border-bottom: 1px solid #000; border-right: 1px solid #000; border-left: 1px solid #000;width: 150px;padding: 0;color: grey; background: #101010; cursor: default; display: none; position: absolute; margin-left: -104px; margin-top: -1px;}
+.panel li ul.uyepaneli {border-bottom: 1px solid #000; border-right: 1px solid #000; border-left: 1px solid #000;width: 150px;padding: 0;color: grey; background: #101010; cursor: default; display: none; position: absolute; margin-left: -99px; margin-top: -1px;}
 .panel li ul.uyepaneli ul {padding: 0; }
 .panel li ul.uyepaneli ul li:hover a{color: #fff}
 .panel li ul.uyepaneli li {border-right: 0px; padding: 5px 8px 5px 8px; margin: 5px 0 5px 0;transition: 100ms; -webkit-transition: 100ms; -moz-transition: 100ms; text-align:left;width: 134px;}
 .panel li ul.uyepaneli li:hover {background: #34495e; color: #fff;}
 .panel li ul.uyepaneli li a {color: #fff}
-.panel ul.kayit li:hover,.navigasyon li:hover {background: #010101; border-bottom: 2px solid darkorange; height: 18px;}
+.panel ul.kayit li:hover,.navigasyon li:hover,.sagsira li:hover{background: #010101; border-bottom: 2px solid darkorange; height: 18px;}
 .panel li:hover ul {display:block;}
 .panel li ul:hover {display:block;}
 .panel li > ul {top: 51px;left: auto; margin-left: -190px;}
@@ -45,15 +45,7 @@ a:hover {color: darkorange; text-decoration:none;}
 .altheader li {float:left; background: #0f0f0f;transition: 100ms; -webkit-transition: 100ms; color: grey; text-shadow: 1px 1px 1px #000; text-align:center; height: 20px; padding: 10px 16px 10px 16px; border-right: 1px solid #000; font-family: 'Exo 2', sans-serif; font-weight: 500; font-size: 14.5px;}
 .altheader li i {margin-right: 5px;}
 .altheader li a {color: grey}
-.altheader li:hover {background: #222;}
-.altheader .sosyal {float:right;}
-.altheader .sosyal i {margin-top: 3px; margin-left: 3px; color: #fff; margin-right: 0;}
-.altheader li.facebook {border-left: 1px solid #000;  text-shadow: 0 0 0; background: #2c3e50}
-.altheader li.facebook:hover {background: #34495e}
-.altheader li.twitter {background: #2980b9; text-shadow: 0 0 0;}
-.altheader li.twitter:hover {background: #3498db}
-.altheader .youtube {background: #c0392b; text-shadow: 0 0 0;}
-.altheader .youtube:hover {background: #e74c3c}
+.altheader li:hover, .sagsira li:hover {background: #222;}
 #content {}
 #footer {height: 82px; border: 2px solid #000;font-family: 'Open Sans', sans-serif; font-size: 15px; text-shadow: 1px 1px 1px black;}
 #footer .top {height: 20px; padding: 10px; background: #111;}
